tests/machine/x/ocaml/query_sum_select.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenquery_sum_select2181370633/001/query_sum_select.ml", line 26, characters 33-34:
26 |     __res0 := (float_of_int (sum n)) :: !__res0;
                                      ^
Error: This expression has type int but an expression was expected of type
         int list
